exports_files([
    "partitions-ultra205.csv",
    "sdkconfig.defaults",
])

filegroup(
    name = "phase28_boot_replay_sources",
    srcs = [
        "src/boot_evidence.rs",
        "src/live_stratum_runtime.rs",
        "src/log_buffer.rs",
        "src/main.rs",
        "src/runtime_uptime.rs",
    ],
    visibility = ["//scripts:__pkg__"],
)

filegroup(
    name = "phase32_i2c_sources",
    srcs = [
        "src/display_adapter.rs",
        "src/main.rs",
        "src/safety_adapter/emc2101.rs",
        "src/safety_adapter/i2c_bus.rs",
        "src/safety_adapter/ina260.rs",
    ],
    visibility = ["//tools/parity:__pkg__"],
)

genrule(
    name = "firmware",
    # Cargo dependency: bitaxe-safety is wired in Cargo.toml and compiled by
    # //scripts:build_firmware.
    srcs = glob(["src/**/*.rs"]) + [
        "//scripts:source_commit_stamp",
        "Cargo.toml",
        "build.rs",
        "partitions-ultra205.csv",
        "sdkconfig.defaults",
    ] + glob(["static/**"]),
    outs = ["bitaxe-firmware.elf"],
    cmd = "$(location //scripts:build_firmware) $(@D) $(location //scripts:source_commit_stamp)",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = ["//scripts:build_firmware"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "firmware_image",
    srcs = [
        "//firmware/bitaxe:firmware",
        "//scripts:source_commit_stamp",
    ],
    outs = [
        "bitaxe-ultra205.elf",
        "esp-miner.bin",
        "www.bin",
        "otadata-initial.bin",
        "bitaxe-ultra205-factory.bin",
        "bitaxe-ultra205-package.json",
    ],
    cmd = "$(location //scripts:package_firmware) --reference-guard $(location //scripts:verify_reference_clean) --firmware-elf $(location //firmware/bitaxe:firmware) --out-dir $(@D) --manifest $(@D)/bitaxe-ultra205-package.json",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = [
        "//scripts:package_firmware",
        "//scripts:verify_reference_clean",
    ],
    visibility = ["//visibility:public"],
)
