load("//scripts:build_identity.bzl", "build_provenance")

exports_files([
    "BUILD.bazel",
    "partitions-ultra205.csv",
    "sdkconfig.defaults",
])

filegroup(
    name = "build_provenance_inputs",
    srcs = [
        "//:firmware_root_build_inputs",
        "//crates/bitaxe-api:bitaxe_api",
        "//crates/bitaxe-asic:bitaxe_asic",
        "//crates/bitaxe-config:bitaxe_config",
        "//crates/bitaxe-core:bitaxe_core",
        "//crates/bitaxe-safety:bitaxe_safety",
        "//crates/bitaxe-stratum:bitaxe_stratum",
        "//scripts:build_identity_status",
    ] + glob([
        "src/**/*.rs",
        "static/**",
    ]) + [
        "BUILD.bazel",
        "Cargo.toml",
        "build.rs",
        "partitions-ultra205.csv",
        "sdkconfig.defaults",
    ],
)

build_provenance(
    name = "_build_provenance",
    srcs = [":build_provenance_inputs"],
)

filegroup(
    name = "build_provenance_stamp",
    srcs = [":_build_provenance"],
    output_group = "stamp",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "build_identity_sdkconfig_defaults",
    srcs = [":_build_provenance"],
    output_group = "sdkconfig_defaults",
)

filegroup(
    name = "phase28_boot_replay_sources",
    srcs = [
        "src/boot_evidence.rs",
        "src/live_stratum_runtime.rs",
        "src/log_buffer.rs",
        "src/main.rs",
        "src/runtime_uptime.rs",
    ],
    visibility = ["//scripts:__pkg__"],
)

filegroup(
    name = "phase32_i2c_sources",
    srcs = [
        "src/display_adapter.rs",
        "src/main.rs",
        "src/operator_sensor_runtime.rs",
        "src/runtime_snapshot.rs",
        "src/safety_adapter/emc2101.rs",
        "src/safety_adapter/i2c_bus.rs",
        "src/safety_adapter/ina260.rs",
        "src/safety_adapter/observation_store.rs",
    ],
    visibility = ["//tools/parity:__pkg__"],
)

filegroup(
    name = "phase33_settings_sources",
    srcs = [
        "src/boot_evidence.rs",
        "src/http_api.rs",
        "src/main.rs",
        "src/rtc_boot_ordinal.rs",
        "src/runtime_snapshot.rs",
        "src/settings_adapter.rs",
        "src/wifi_adapter.rs",
    ],
    visibility = ["//tools/parity:__pkg__"],
)

filegroup(
    name = "phase34_identity_sources",
    srcs = [
        "//crates/bitaxe-api:phase34_identity_sources",
        "//crates/bitaxe-core:phase34_identity_sources",
        "build.rs",
        "src/main.rs",
        "src/runtime_snapshot.rs",
    ],
    visibility = ["//tools/parity:__pkg__"],
)

genrule(
    name = "firmware",
    # Cargo dependency: bitaxe-safety is wired in Cargo.toml and compiled by
    # //scripts:build_firmware.
    srcs = glob(["src/**/*.rs"]) + [
        ":build_identity_sdkconfig_defaults",
        ":build_provenance_inputs",
        ":build_provenance_stamp",
        "Cargo.toml",
        "build.rs",
        "partitions-ultra205.csv",
        "sdkconfig.defaults",
    ] + glob(["static/**"]),
    outs = ["bitaxe-firmware.elf"],
    cmd = "$(location //scripts:build_firmware) $(@D) $(location :build_provenance_stamp) $(location :build_identity_sdkconfig_defaults)",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = ["//scripts:build_firmware"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "firmware_image",
    srcs = [
        "//firmware/bitaxe:firmware",
        ":build_provenance_stamp",
    ],
    outs = [
        "bitaxe-ultra205.elf",
        "esp-miner.bin",
        "www.bin",
        "otadata-initial.bin",
        "bitaxe-ultra205-factory.bin",
        "bitaxe-ultra205-package.json",
    ],
    cmd = "$(location //scripts:package_firmware) --reference-guard $(location //scripts:verify_reference_clean) --firmware-elf $(location //firmware/bitaxe:firmware) --out-dir $(@D) --manifest $(@D)/bitaxe-ultra205-package.json",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = [
        "//scripts:package_firmware",
        "//scripts:verify_reference_clean",
    ],
    visibility = ["//visibility:public"],
)
