[package]
name = "bitaxe-flash"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitaxe-api = { path = "../../crates/bitaxe-api" }
bitaxe-config = { path = "../../crates/bitaxe-config" }
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
