load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "report",
    srcs = [
        "src/api_compare.rs",
        "src/main.rs",
        "src/mining_allow.rs",
        "src/release_gate.rs",
        "src/safety_allow.rs",
    ],
    compile_data = glob(["fixtures/**"]),
    crate_name = "bitaxe_parity",
    data = ["//scripts:verify_reference_clean"],
    edition = "2021",
    deps = [
        "//crates/bitaxe-api:bitaxe_api",
        "@crates//:anyhow",
        "@crates//:camino",
        "@crates//:clap",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    crate = ":report",
)
