load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "report",
    srcs = [
        "src/api_compare.rs",
        "src/claim_ladder.rs",
        "src/main.rs",
        "src/mining_allow.rs",
        "src/operator_evidence.rs",
        "src/operator_evidence/generation.rs",
        "src/operator_evidence/generation/filesystem.rs",
        "src/operator_evidence/generation/ownership.rs",
        "src/operator_evidence/generation/phase35.rs",
        "src/operator_evidence/generation/rendering.rs",
        "src/operator_evidence/generation/tests.rs",
        "src/operator_evidence/generation/tests/completion.rs",
        "src/operator_evidence/generation/tests/consolidation.rs",
        "src/operator_evidence/generation/tests/ownership.rs",
        "src/operator_evidence/generation/tests/promotion.rs",
        "src/operator_evidence/generation/tests/support.rs",
        "src/operator_evidence/inventory.rs",
        "src/operator_evidence/profile.rs",
        "src/operator_evidence/tests.rs",
        "src/operator_snapshot_evidence.rs",
        "src/phase35_evidence.rs",
        "src/phase35_evidence/contract.rs",
        "src/phase35_evidence/digests.rs",
        "src/phase35_evidence/inventory.rs",
        "src/phase35_evidence/projection.rs",
        "src/phase35_evidence/tests.rs",
        "src/phase35_evidence/tests/admission.rs",
        "src/phase35_evidence/tests/fixtures.rs",
        "src/phase35_evidence/tests/fixtures/catalog.rs",
        "src/phase35_promotion.rs",
        "src/phase35_promotion/checklist.rs",
        "src/phase35_promotion/evaluator.rs",
        "src/phase35_promotion/tests.rs",
        "src/phase35_promotion/types.rs",
        "src/phase32_source_guard.rs",
        "src/phase33_source_guard.rs",
        "src/phase34_source_guard.rs",
        "src/release_evidence.rs",
        "src/release_gate.rs",
        "src/safety_allow.rs",
        "src/v12_admission.rs",
    ],
    compile_data = glob(["fixtures/**"]) + [
        "//:docs/parity/checklist.md",
        "//:docs/parity/evidence/phase-22-claim-ladder-and-safety-preconditions/claim-ladder.md",
        "//:docs/parity/evidence/phase-30-live-share-outcome-and-verified-promotion/conclusion.md",
        "//firmware/bitaxe:phase32_i2c_sources",
        "//firmware/bitaxe:phase33_settings_sources",
        "//firmware/bitaxe:phase34_identity_sources",
        "//scripts:package-firmware.sh",
        "//tools/flash:phase34_identity_admission_sources",
        "//tools/xtask:phase34_package_identity_sources",
    ],
    crate_name = "bitaxe_parity",
    data = ["//scripts:verify_reference_clean"],
    edition = "2021",
    deps = [
        "//crates/bitaxe-api:bitaxe_api",
        "@crates//:anyhow",
        "@crates//:camino",
        "@crates//:clap",
        "@crates//:libc",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    crate = ":report",
    visibility = ["//firmware/bitaxe:__pkg__"],
)
