load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

filegroup(
    name = "phase34_package_identity_sources",
    srcs = [
        "src/main.rs",
        "src/package_manifest.rs",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "xtask",
    srcs = [
        "src/main.rs",
        "src/package_manifest.rs",
        "src/partition_contract.rs",
    ],
    crate_name = "xtask",
    edition = "2021",
    deps = [
        "//crates/bitaxe-api:bitaxe_api",
        "@crates//:anyhow",
        "@crates//:camino",
        "@crates//:clap",
        "@crates//:esp-idf-part",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:tempfile",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    crate = ":xtask",
    data = ["//firmware/bitaxe:partitions-ultra205.csv"],
)
