[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitaxe-api = { path = "../../crates/bitaxe-api" }
camino.workspace = true
clap.workspace = true
esp-idf-part = "0.6.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
